Others/Inject-Environment-Variables.yml
cat <<EOF | kubectl apply -f -
apiVersion: v1
kind: Namespace
metadata:
  name: $NS
  labels:
    name: $NS
EOF
